[package]
name = "Ur"
version = "0.1.0"
authors = ["alban <alban.reynaud@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[profile.dev]
opt-level = 3

[[bin]]
name = "main"
path = "src/main.rs"
